# vk-sdf-font

./: .gitmodules  compute.hpp  font.hpp  geometry.hpp  io.hpp  io_helper.hpp  main.cpp  math.hpp  meson.build  sdf.hpp  vulkan.hpp
shaders/: font_render.comp
subprojects/: .gitignore
